--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+    margin: 0;
+    padding: 0;
+    background-color: rgba(87, 87, 87, 0.75);
+    color: white;
+    width: 100vw;
+    height: 100%;
+    font-family: "Roboto", sans-serif;
+}
+
+body {
+    background: var(--background-default);
+}
+
+.spacer {
+    flex: 1 1 auto;
+}
+.flex {
+    display: flex;
+}
+.flexCenter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
